// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return article results when searching with article id 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 1,
      "key": "code_du_travail",
    },
    Object {
      "doc_count": 1,
      "key": "fiches_ministere_travail",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "8",
        "_index": "cdtn_document_test",
        "_score": 16.501816,
        "_source": Object {
          "slug": "r1225-18",
          "source": "code_du_travail",
          "title": "Article R1225-18",
          "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "15",
        "_index": "cdtn_document_test",
        "_score": 4.6238427,
        "_source": Object {
          "anchor": "#A-qui-s-applique-le-SMIC",
          "slug": "le-smic-a-qui-sapplique-le-smic",
          "source": "fiches_ministere_travail",
          "title": "Le SMIC : à qui s’applique le SMIC ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-remuneration/article/le-smic-374531#A-qui-s-applique-le-SMIC",
        },
        "_type": "_doc",
      },
    ],
    "max_score": 16.501816,
    "total": Object {
      "relation": "eq",
      "value": 2,
    },
  },
}
`;

exports[`return faq search results for demission  1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 2,
      "key": "code_du_travail",
    },
    Object {
      "doc_count": 2,
      "key": "faq",
    },
    Object {
      "doc_count": 2,
      "key": "fiches_ministere_travail",
    },
    Object {
      "doc_count": 2,
      "key": "fiches_service_public",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "6",
        "_index": "cdtn_document_test",
        "_score": 5.6223745,
        "_source": Object {
          "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
          "source": "faq",
          "title": "Dans les HCR, quel est le préavis de démission ?",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "7",
        "_index": "cdtn_document_test",
        "_score": 5.0342846,
        "_source": Object {
          "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
          "source": "faq",
          "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
        },
        "_type": "_doc",
      },
    ],
    "max_score": 5.6223745,
    "total": Object {
      "relation": "eq",
      "value": 2,
    },
  },
}
`;

exports[`return faq search results for smic with snippet content 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 1,
      "key": "fiches_ministere_travail",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "15",
        "_index": "cdtn_document_test",
        "_score": 14.67506,
        "_source": Object {
          "anchor": "#A-qui-s-applique-le-SMIC",
          "slug": "le-smic-a-qui-sapplique-le-smic",
          "source": "fiches_ministere_travail",
          "title": "Le SMIC : à qui s’applique le SMIC ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-remuneration/article/le-smic-374531#A-qui-s-applique-le-SMIC",
        },
        "_type": "_doc",
      },
    ],
    "max_score": 14.67506,
    "total": Object {
      "relation": "eq",
      "value": 2,
    },
  },
  "snippet": Object {
    "_id": "14",
    "_index": "cdtn_document_test",
    "_score": 9.5135565,
    "_source": Object {
      "html": "<p>Au 1er janvier 2019, le montant du <accronym title='Salaire minimum interprofessionnel de croissance' lang='fr'>SMIC</accronym> brut horaire s'établit à <b>10,03&nbsp;€</b> en métropole, en Guadeloupe, en Guyane, en Martinique, à La Réunion, à Saint-Barthélemy, à Saint-Martin et à Saint-Pierre-et-Miquelon.<br/> Soit <b>1521,22&nbsp;€</b> mensuels sur la base de la durée légale du travail de 35 heures hebdomadaires</p>",
      "references": Array [
        Object {
          "titre": "Décret n° 2018-1173 du 19 décembre 2018 portant relèvement du salaire minimum de croissance ",
          "url": "https://www.legifrance.gouv.fr/eli/decret/2018/12/19/MTRX1833925D/jo/texte",
        },
      ],
    },
    "_type": "_doc",
  },
}
`;

exports[`return search results for demission 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 8,
      "key": "fiches_service_public",
    },
    Object {
      "doc_count": 5,
      "key": "fiches_ministere_travail",
    },
    Object {
      "doc_count": 3,
      "key": "code_du_travail",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_source": Object {
          "slug": "demission-dun-salarie",
          "source": "fiches_service_public",
          "title": "Démission d'un salarié",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
        },
        "relevance": 5,
      },
      Object {
        "_source": Object {
          "anchor": "#Comment-presenter-une-demission",
          "slug": "la-demission-comment-presenter-une-demission",
          "source": "fiches_ministere_travail",
          "title": "La démission: comment présenter une démission ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
        },
        "relevance": 5,
      },
      Object {
        "_source": Object {
          "slug": "l1231-1",
          "source": "code_du_travail",
          "title": "Article L1231-1",
          "url": "/code-du-travail/l1231-1",
        },
        "relevance": 5,
      },
      Object {
        "_source": Object {
          "slug": "l1237-1",
          "source": "code_du_travail",
          "title": "Article L1237-1",
          "url": "/code-du-travail/l1237-1",
        },
        "relevance": 5,
      },
      Object {
        "_source": Object {
          "slug": "peut-on-demissionner-pendant-ses-conges-payes",
          "source": "fiches_service_public",
          "title": "Peut-on démissionner pendant ses congés payés ?",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F12598",
        },
        "relevance": 4,
      },
      Object {
        "_source": Object {
          "slug": "peut-on-demissionner-pendant-un-conge-maternite",
          "source": "fiches_service_public",
          "title": "Peut-on démissionner pendant un congé maternité ?",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F1730",
        },
        "relevance": 4,
      },
      Object {
        "_source": Object {
          "slug": "peut-on-demissionner-pendant-un-arret-maladie",
          "source": "fiches_service_public",
          "title": "Peut-on démissionner pendant un arrêt maladie ?",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F31679",
        },
        "relevance": 4,
      },
      Object {
        "_source": Object {
          "slug": "peut-on-demissionner-pendant-un-conge-parental",
          "source": "fiches_service_public",
          "title": "Peut-on démissionner pendant un congé parental ?",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F540",
        },
        "relevance": 4,
      },
      Object {
        "_source": Object {
          "anchor": "#Le-salarie-peut-il-lt-lt-demissionner-dans-le-cadre-d-un-contrat-a-nbsp",
          "slug": "la-demission-le-salarie-peut-il-demissionner-dans-le-cadre-dun-contrat-a-duree-determinee",
          "source": "fiches_ministere_travail",
          "title": "La démission: le salarié peut-il « démissionner » dans le cadre d’un contrat à durée déterminée ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Le-salarie-peut-il-lt-lt-demissionner-dans-le-cadre-d-un-contrat-a-nbsp",
        },
        "relevance": 4,
      },
      Object {
        "_source": Object {
          "anchor": "#Faut-il-respecter-un-preavis",
          "slug": "la-demission-faut-il-respecter-un-preavis",
          "source": "fiches_ministere_travail",
          "title": "La démission: faut-il respecter un préavis ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Faut-il-respecter-un-preavis",
        },
        "relevance": 4,
      },
      Object {
        "_source": Object {
          "slug": "demission-du-salarie-a-domicile-employe-par-un-particulier",
          "source": "fiches_service_public",
          "title": "Démission du salarié à domicile employé par un particulier",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F32431",
        },
        "relevance": 3,
      },
      Object {
        "_source": Object {
          "slug": "demission-dune-assistante-maternelle",
          "source": "fiches_service_public",
          "title": "Démission d'une assistante maternelle",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
        },
        "relevance": 3,
      },
      Object {
        "_source": Object {
          "anchor": "#Le-refus-par-le-salarie-d-accepter-un-changement-des-conditions-de-nbsp",
          "slug": "la-demission-le-refus-par-le-salarie-daccepter-un-changement-des-conditions-de-travail-est-il-une-demission",
          "source": "fiches_ministere_travail",
          "title": "La démission: le refus, par le salarié, d’accepter un changement des conditions de travail est-il une démission ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Le-refus-par-le-salarie-d-accepter-un-changement-des-conditions-de-nbsp",
        },
        "relevance": 3,
      },
      Object {
        "_source": Object {
          "slug": "l1237-2",
          "source": "code_du_travail",
          "title": "Article L1237-2",
          "url": "/code-du-travail/l1237-2",
        },
        "relevance": 3,
      },
      Object {
        "_source": Object {
          "slug": "peut-on-percevoir-lallocation-chomage-en-cas-de-demission",
          "source": "fiches_service_public",
          "title": "Peut-on percevoir l'allocation chômage en cas de démission ?",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F89",
        },
        "relevance": 2,
      },
      Object {
        "_source": Object {
          "anchor": "#Et-les-heures-pour-recherche-d-emploi",
          "slug": "la-demission-et-les-heures-pour-recherche-demploi",
          "source": "fiches_ministere_travail",
          "title": "La démission: et les heures pour recherche d’emploi ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Et-les-heures-pour-recherche-d-emploi",
        },
        "relevance": 2,
      },
    ],
  },
}
`;

exports[`return search results for demission from elastic 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 2,
      "key": "code_du_travail",
    },
    Object {
      "doc_count": 2,
      "key": "faq",
    },
    Object {
      "doc_count": 2,
      "key": "fiches_ministere_travail",
    },
    Object {
      "doc_count": 2,
      "key": "fiches_service_public",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2",
        "_index": "cdtn_document_test",
        "_score": 7.3222866,
        "_source": Object {
          "anchor": "#Comment-presenter-une-demission",
          "slug": "demission-comment-presenter-une-demission",
          "source": "fiches_ministere_travail",
          "title": "Démission : comment présenter une démission ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "4",
        "_index": "cdtn_document_test",
        "_score": 7.2790303,
        "_source": Object {
          "slug": "demission-dun-salarie",
          "source": "fiches_service_public",
          "title": "Démission d'un salarié",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "5",
        "_index": "cdtn_document_test",
        "_score": 6.468056,
        "_source": Object {
          "slug": "demission-dune-assistante-maternelle",
          "source": "fiches_service_public",
          "title": "Démission d'une assistante maternelle",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "6",
        "_index": "cdtn_document_test",
        "_score": 6.4677696,
        "_source": Object {
          "slug": "dans-les-hcr-quel-est-le-preavis-de-demission",
          "source": "faq",
          "title": "Dans les HCR, quel est le préavis de démission ?",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "7",
        "_index": "cdtn_document_test",
        "_score": 5.8796797,
        "_source": Object {
          "slug": "joccupe-un-poste-de-vendeuse-en-boulangerie-patisserie-et-je-viens-de-poser-ma-demission-quelles-sont-les-consequences-dun-arret-maladie-pendant-la-periode-de-preavis-est-ce-que-je-peux-etre-sanctionnee-en-cas-darret-de-travail",
          "source": "faq",
          "title": "J'occupe un poste de vendeuse en boulangerie-pâtisserie et je viens de poser ma démission. Quelles sont les conséquences d’un arrêt maladie pendant la période de préavis ? Est-ce que je peux être sanctionnée en cas d’arrêt de travail ?",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "3",
        "_index": "cdtn_document_test",
        "_score": 3.4885364,
        "_source": Object {
          "anchor": "#L-absence-prolongee-du-salarie-est-elle-une-demission",
          "slug": "demission-labsence-prolongee-du-salarie-est-elle-une-demission",
          "source": "fiches_ministere_travail",
          "title": "Démission : l’absence prolongée du salarié est-elle une démission ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#L-absence-prolongee-du-salarie-est-elle-une-demission",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "8",
        "_index": "cdtn_document_test",
        "_score": 3.369451,
        "_source": Object {
          "slug": "r1225-18",
          "source": "code_du_travail",
          "title": "Article R1225-18",
          "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
        },
        "_type": "_doc",
      },
      Object {
        "_id": "9",
        "_index": "cdtn_document_test",
        "_score": 3.311926,
        "_source": Object {
          "slug": "r1442-22-4",
          "source": "code_du_travail",
          "title": "Article R1442-22-4",
          "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000033748111&cidTexte=LEGITEXT000006072050",
        },
        "_type": "_doc",
      },
    ],
    "max_score": 7.3222866,
    "total": Object {
      "relation": "eq",
      "value": 8,
    },
  },
}
`;
